[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
reqwest = "0.11.18"
serde_json = "1.0.97"
tokio = "1.28.2"

[lib]
crate-type = ["staticlib", "cdylib"]
